# VaultPad

./: LICENSE  README.md  README.ru.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: rename-artifacts.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  keychain.rs  lib.rs  main.rs  models.rs  password_registry.rs  server_config.rs
src-tauri/src/commands/: auth.rs  backups.rs  mod.rs  projects.rs  servers.rs  settings.rs  sync.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/storage/: local.rs  mod.rs  remote.rs
src/components/: AddServerDialog.tsx  AdminPanel.tsx  BackupHistoryPanel.tsx  ChangeCredentialsDialog.tsx  ChangeMasterPasswordDialog.tsx  ConflictResolutionDialog.tsx  ContentView.tsx  CustomPasswordDialog.tsx  DeleteProjectDialog.tsx  DiffView.tsx  EditProjectDialog.tsx  Editor.tsx  EditorToolbar.tsx  InitScreen.tsx  LocalSection.tsx  LoginDialog.tsx  MainLayout.tsx  MasterPasswordSetup.tsx  NewProjectDialog.tsx  PasswordRegistryView.tsx  PinInput.tsx  PinSetup.tsx  PinUnlock.tsx  ProjectList.tsx  SearchBar.tsx  ServerAuthDialog.tsx  ServerDropdownMenu.tsx  ServerItem.tsx  ServerMasterPasswordDialog.tsx  SettingsPanel.tsx  Sidebar.tsx  Spinner.tsx  SplashScreen.tsx  SyncStatusIcon.tsx  UnlockScreen.tsx
src/hooks/: useAutoLock.ts  useDebounce.ts  useProjectManager.ts  useSyncManager.ts  useTauri.ts  useTheme.ts
src/i18n/: index.ts
src/lib/: tiptap-search.ts  types.ts
src/store/: index.ts
(+2 files in other folders)
